Implementing Pagination and Sorting